opam-version: "1.2"
version: "1.0.0"
maintainer: "Jonathan Siebern <jsiebern88@gmail.com>"
authors: [ "Jonathan Siebern <jsiebern88@gmail.com>" ]
homepage: "https://github.com/jsiebern/reason-mui-withstyles-ppx"
bug-reports: "https://github.com/jsiebern/reason-mui-withstyles-ppx/issues"
dev-repo: "git+https://github.com/jsiebern/reason-mui-withstyles-ppx.git"
available: ocaml-version >= "4.02.3"
depends: [
  "dune"                    {build}
  "ocaml-migrate-parsetree" {>="1.0.0"}
  "reason"                  {build}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
